--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,32 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+#button {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	column-gap: 15px;
+	margin-bottom: 50px;
+}
+#button_manage {
+	height: 37px;
+	background: white;
+	border: 1px solid #1d6154;
+	border-radius: 60px;
+	color: #1d6154;
+	cursor: pointer;
+	width: auto;
+	box-sizing: border-box;
+	padding: 0 18px;
+	font-family: 'Syne';
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 19px;
+	text-align: center;
+	font-style: normal;
+}
+
+  
 .gallery {
 	width: 100%;
 	display: grid;
