--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,7 @@ li:hover {
 
 #introduction p {
 	margin-bottom: 0.5em;
+	color: black;
 }
 #portfolio h2 {
 	text-align: center;
@@ -168,7 +169,7 @@ li:hover {
 	width: 100%;
 
 }
-/** FORM **/
+/** PAGE DE CONNEXION **/
 #contact {
 	width: 50%;
 margin: auto;
@@ -218,21 +219,173 @@ footer nav ul {
 	margin: 2em
 }
 
-/* forgotten password */
+/* buttons category*/
+div.filtres {
+	display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 10px;
+    margin-bottom: 50px;
+}
 
-.password-forgot {
-	background: none;
+#btn-filtre-0{
+	font-family: Syne;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    color: rgb(29, 97, 84);
+    border: 1px solid rgb(29, 97, 84);
+    background-color: rgb(255, 254, 248);
+    border-radius: 60px;
+    width: fit-content;
+    padding: 8px 20px;
+    text-decoration: none;
+}
+
+#btn-filtre-2 , #btn-filtre-1, #btn-filtre-3{
+	border: 1px solid rgb(29, 97, 84);
+    font-size: 16px;
+    width: fit-content;
+    border-radius: 60px;
+    line-height: 19px;
+    color: rgb(29, 97, 84);
+    font-family: Syne;
+    background-color: rgb(255, 254, 248);
+    font-weight: 700;
+    padding: 8px 20px;
+    text-decoration: none;
+}
+
+#btn-filtre-1:hover ,#btn-filtre-2:hover, #btn-filtre-3:hover, #btn-filtre-0:hover {
+	color :#FFFFFF;
+	text-decoration: none;
+	background-color: #1D6154;
+}
+
+
+#modal {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+	overflow: auto;
+	width: 630px;
+	max-width: calc(100vw - 100px);
+	max-height: calc(100vh - 100px);
+	padding-top: 32px;
+	padding-bottom: 60px;
+	background-color: #FFFFFF;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+}
+.modal-close {
 	border: none;
-	text-decoration: underline;
+	background: none;
+	padding-right: 36px;
+	font-size: 12px;
+	text-align: right;
 }
 
-/* incorrect password */
+.modal-body{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 46px 75px 20px 75px;
+	padding-bottom: 30px;
+	gap: 10px;
+	border-bottom: solid 1px #B3B3B3;
+}
 
-.error {
+.button-add-works{
+	font-family: 'Syne';
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 19px;
+	color: #FFFFFF;
+	background-color: #1D6154;
+	border: 0px;
+	border-radius: 60px;
+	width: fit-content;
+	padding: 10px 49px;
+	margin: auto;
+}
+.delete-works{
+	font-family: 'Syne';
+	font-size: 14px;
+	line-height: 17px;
+	text-decoration: none;
 	color: #D65353;
-	font-size: 20px;
-	font-weight: bold;
-	padding-top: 20px;
+	text-align: center;
+	margin-top: 23px;
 }
 
+divBanniere{
+	background-color: rgb(0, 0, 0);
+    width: 100%;
+    margin: 0px 0px 39px;
+    height: 59px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 21px;
+}
 
+body{
+	flex-wrap: wrap;
+    margin-top: 0px;
+    max-width: 100%;
+}
+
+header{
+	max-width: 1140px;
+    margin: 50px auto;
+}
+
+main{
+	max-width: 1140px;
+    margin: auto;
+}
+p{
+	color: rgb(255, 255, 255);
+    font-family: "Work Sans";
+    font-size: 14px;
+}
+
+buttonPublier{
+	    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border-radius: 60px;
+    padding: 11px 23px;
+    font-family: "Work Sans";
+    font-size: 14px;
+}
+#titlework{
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 31px;
+    padding-top: 4px;
+}
+
+.modifierModalA{
+	margin-bottom: 2em;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+#buttonPublier{
+	color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border-radius: 60px;
+    padding: 11px 23px;
+    font-family: "Work Sans";
+    font-size: 14px;
+}
