--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -533,7 +533,7 @@ log in
   align-items: center;
   margin: 60px 0px 20px 0px;
 }
-.buttonAddPhoto,
+.addPhotoModal,
 .model_suprimer {
   cursor: pointer;
   font-family: "Syne";
@@ -546,7 +546,9 @@ log in
 
 }
 .buttonAddPhoto{
-margin-bottom: 10px;}
+margin-bottom: 10px;
+}
+
 .model_suprimer {
   color: #d65353;
   background-color: white;
@@ -734,4 +736,14 @@ height: 52px;
   margin-bottom: -19px;
   font-size: 16px;
   text-align: center;
+}
+
+#modalGallery img{
+  width: 100%;
+}
+.modalPhotoGallery {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  position: relative;
 }
