--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -342,14 +342,12 @@ footer nav ul {
   color: white;
 }
 
-/*
-log in
-*/
-#main-holder {
+/***************** PAGE DE CONNEXION **************/
+#loginMain {
   padding-top: 97px;
 }
 
-#login-header {
+#headerOfLogin{
   color: #1d6154;
   display: grid;
   justify-items: center;
@@ -359,15 +357,15 @@ log in
   font-weight: 700;
 }
 
-#login-form {
+#loginForm {
   align-self: flex-start;
   display: grid;
   justify-items: center;
   align-items: center;
   grid-gap: 7px;
 }
-.titre,
-.titrep {
+.titleEmail,
+.passwordLogin {
   font-family: "Work Sans";
   font-style: normal;
   font-weight: 500;
@@ -378,7 +376,7 @@ log in
   position: relative;
   right: 166px;
 }
-.titrep {
+.passwordLogin {
   right: 144px;
 }
 
@@ -392,7 +390,7 @@ log in
   border: none;
 }
 .buttonAddPhoto,
-#login-form-submit {
+#submitFormLogin {
   border-radius: 60px;
   border: 1px #1d6154;
   width: 179px;
@@ -402,7 +400,7 @@ log in
   color: white;
 }
 
-.login-form-oublie {
+.passwordForget {
   color: black;
   padding-bottom: 300px;
 }
@@ -412,12 +410,13 @@ log in
   font-weight: bolder;
 }
 
+/*************** MODE EDITION *******************/
+
 #banniere {
-  
   max-width: 1140px;
   width:100%;
   height: 59px;
-   margin: 0 auto;
+  margin: 0 auto;
   padding: 0px;
   position: fixed;
   top: 0;
@@ -425,10 +424,6 @@ log in
   justify-content: center;
   align-items: center;
   column-gap: 26px;
-
-}
-#titre {
-  display: inline;
 }
 
 .edition div {
@@ -467,7 +462,7 @@ log in
   border: 1px black;
 }
 
-/*le modal */
+/****************** LA MODALE *******************/
 #modifier,
 #modifier_model {
   display: flex;
@@ -479,26 +474,30 @@ log in
 
 .modal {
   position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.736);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
 }
 
-.modal_container {
-  overflow: auto;
-  width: 630px;
-  height: 731px;
-  max-width: 100vw;
-  max-height: 100vh;
-  padding: 30px;
-  background: #fff;
-  padding: 20px;
+.modalContainer {
+  overflow: hidden;
+  height: 610px;
+  width:516px;
+  max-width: calc(100vw - 100px);
+  
+  background-color: #FFFFFF;
   border-radius: 10px;
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  padding-bottom: 50px;
 }
+
 #btnCloseAddPhoto,
 #model_fermer {
   padding: 8px 10px;
@@ -507,13 +506,10 @@ log in
   color: black;
   background-color: #ffffff;
   cursor: pointer;
-  position: relative;
-  right: -596px;
-  top: -4px;
-  margin-bottom: -15px;
+  position: absolute;
+  right: 490px;
 }
 .modalTitle {
-  margin-top: -32px;
   color: #000000;
   display: flex;
   justify-content: center;
@@ -527,12 +523,12 @@ log in
 }
 .button {
   border-top: 1px solid #b3b3b3;
-  padding-top: 53px;
+  padding-top: 40px;
   display: flex;
   flex-direction: column;
   row-gap: 20px;
   align-items: center;
-  margin: 60px 0px 20px 0px;
+  margin: 29px 0px 54px 0px;
 }
 .addPhotoModal,
 .deleteGaleryModal {
@@ -549,7 +545,16 @@ log in
 .buttonAddPhoto{
 margin-bottom: 10px;
 }
-
+#buttonCloseModal{
+  border: none;
+  font-size: 20px;
+  color: black;
+  background-color: #ffffff;
+  cursor: pointer;
+  position: relative;
+  right: -229px;
+  margin-bottom: 0px;
+}
 .deleteGaleryModal {
   color: #d65353;
   background-color: white;
@@ -557,9 +562,13 @@ margin-bottom: 10px;
 }
 
 .modalBody {
-  width: 80%;
-  margin: 0 auto;
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  
+  height: 100%;
+
+
+  padding: 0 15%;
 }
 
 #modalGallery {
@@ -570,7 +579,7 @@ margin-bottom: 10px;
   row-gap: 29px;
   justify-content: center;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 14px;
+  grid-gap: 10px;
 }
 
 /*icon poubelle */
@@ -584,8 +593,8 @@ margin-bottom: 10px;
   color: #ffffff;
   cursor: pointer;
   background: black;
-  width: 30px;
-  height: 30px;
+  width: 22px;
+  height: 22px;
   position: absolute;
   margin: 5px;
   border-radius: 6px;
@@ -599,16 +608,17 @@ margin-bottom: 10px;
 
 .fa-arrows-up-down-left-right {
   position: relative;
-  right: -15px;
-  top: 78px;
+  right: 0px;
+  top: 40px;
   z-index: 1;
 }
 
 .fa-arrow-left {
   font-size: 19px;
   cursor: pointer;
-  position: relative;
-  left: -25px;
+  position: absolute;
+  top: 37px;
+  left:495px;
 }
 .photo {
   
@@ -621,14 +631,12 @@ margin-bottom: 10px;
 .addModalDownload {
   display: flex;
   flex-direction: column;
-  width: 458px;
-  height: 217px;
-  margin: 0 auto;
-  background: #e8f1f7;
-  border-radius: 3px;
+  justify-content: space-around;
   align-items: center;
- row-gap: 9px;
-  justify-content: center;
+  background-color: rgb(232, 241, 246);
+  height: 67%;
+  width: 100%;
+  padding: 20px 0;
 }
 .ajout {
   color: #306685;
@@ -638,32 +646,28 @@ margin-bottom: 10px;
   cursor: pointer;
 }
 #model_gallery_ajout {
+  height: 531px;
+  width: 100%;
   display: flex;
-  padding: 0px;
-  row-gap: 17px;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   flex-direction: column;
-  margin-bottom: 8px;
 }
 .input_modal_ajout label {
-  font-family: "Work Sans";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 16px;
-  color: #3d3d3d;
+  padding-bottom: 10px;
+  font-size: 16px;
 }
 .input_modal_ajout_choix,
 .input_modal_ajout {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 28px;
   width: 100%;
 }
 .input_modal_ajout_choix,
 .titleModal {
-  height: 51px;
+  height: 30px;
   background: #ffffff;
   box-shadow: 0px 4px 14px rgb(0 0 0 / 9%);
   border: none;
@@ -676,17 +680,22 @@ margin-bottom: 10px;
   background-color: #1d6154;
 }
 .modal_ajout_valider {
-  width: 90%;
-  display: flex;
-  padding-top: 43px;
-  justify-content: center;
-  border-top: 1px solid #b3b3b3;
-  margin: 0 auto;
+
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+ 
 }
 
 .input_modal_ajout_choix {
-  font-size: 16px;
-  padding-top: 15px;
+  height: 30px;
+    border: 0px solid grey;
+    box-shadow: 8px 10px 23px 1px rgb(0 0 0 / 34%);
+    background-color: transparent;
+    outline: none;
+    padding: 0 20px;
 }
 .input_modal_ajout_choix option:hover {
   background-color: #e8f1f6;
@@ -700,7 +709,6 @@ margin-bottom: 10px;
 }
 /*btn telecharger img*/
 .input_img_btn {
-  position: relative;
   position: relative;
   bottom: -64px;
   color: transparent;
@@ -776,12 +784,14 @@ height: 52px;
 }
 
 #add {
-  color: #306685;
-  background: #cbd6dc;
-  border-radius: 50px;
-  height: 52px;
+  display: inline-block;
+  background-color: rgb(203, 214, 220);
+  padding: 10px 15px;
+  border-radius: 25px;
   cursor: pointer;
-  border: none;
+}
+#addModal{
+  align-items: center;
 }
 
 .addPhotoModal,.valider {
@@ -797,3 +807,18 @@ height: 52px;
   background: #a7a7a7;
   border-radius: 60px;
 }
+
+.titleModalFirst{
+  margin-top: -61px;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 30px;
+  text-align: center;
+  margin-bottom: 38px;
+}
+
