--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -241,7 +241,7 @@ li a:hover {
   text-align: center;
   margin-bottom: 60px;
 }
-#portfolio_modifier {
+#modifierPortfolio {
   display: flex;
   align-items: baseline;
   column-gap: 16px;
@@ -258,7 +258,7 @@ li a:hover {
   grid-row-gap: 20px;
   margin: 0 auto;
 }
-#model_gallery img,
+#modalGallery img,
 .gallery img {
   width: 100%;
 }
@@ -463,14 +463,7 @@ footer nav ul {
 }
 
 /****************** LA MODALE *******************/
-#modifier,
-#modifier_model {
-  display: flex;
-  flex-direction: row;
-  column-gap: 10px;
-  font-size: 16px;
-  cursor: pointer;
-}
+
 
 .modal {
   position: fixed;
@@ -489,7 +482,6 @@ footer nav ul {
   height: 610px;
   width:516px;
   max-width: calc(100vw - 100px);
-  
   background-color: #FFFFFF;
   border-radius: 10px;
   display: flex;
@@ -540,7 +532,6 @@ footer nav ul {
   line-height: 17px;
   text-align: center;
   width: 237px;
-
 }
 .buttonAddPhoto{
 margin-bottom: 10px;
@@ -564,10 +555,7 @@ margin-bottom: 10px;
 .modalBody {
   display: flex;
   flex-direction: column;
-  
   height: 100%;
-
-
   padding: 0 15%;
 }
 
@@ -599,12 +587,7 @@ margin-bottom: 10px;
   margin: 5px;
   border-radius: 6px;
 }
-.photo_model_efface {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-  position: relative;
-}
+
 
 .fa-arrows-up-down-left-right {
   position: relative;
@@ -621,7 +604,6 @@ margin-bottom: 10px;
   left:495px;
 }
 .photo {
-  
   background: #e8f1f7;
   color: #b9c5cc;
   margin-bottom: -60px;
@@ -638,14 +620,14 @@ margin-bottom: 10px;
   width: 100%;
   padding: 20px 0;
 }
-.ajout {
+.add {
   color: #306685;
   background: #cbd6dc;
   border-radius: 50px;
   height: 52px;
   cursor: pointer;
 }
-#model_gallery_ajout {
+#modalAddGallery {
   height: 531px;
   width: 100%;
   display: flex;
@@ -653,19 +635,19 @@ margin-bottom: 10px;
   align-items: center;
   flex-direction: column;
 }
-.input_modal_ajout label {
+.inputTitleCategory label {
   padding-bottom: 10px;
   font-size: 16px;
 }
-.input_modal_ajout_choix,
-.input_modal_ajout {
+.inputTitleCategoryChoice,
+.inputTitleCategory {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
   margin-bottom: 28px;
   width: 100%;
 }
-.input_modal_ajout_choix,
+.inputTitleCategoryChoice,
 .titleModal {
   height: 30px;
   background: #ffffff;
@@ -679,36 +661,34 @@ margin-bottom: 10px;
 .valider:hover {
   background-color: #1d6154;
 }
-.modal_ajout_valider {
-
+.buttonValidate {
     text-align: center;
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
- 
 }
 
-.input_modal_ajout_choix {
+.inputTitleCategoryChoice {
   height: 30px;
-    border: 0px solid grey;
-    box-shadow: 8px 10px 23px 1px rgb(0 0 0 / 34%);
-    background-color: transparent;
-    outline: none;
-    padding: 0 20px;
+  border: 0px solid grey;
+  box-shadow: 8px 10px 23px 1px rgb(0 0 0 / 34%);
+  background-color: transparent;
+  outline: none;
+  padding: 0 20px;
 }
-.input_modal_ajout_choix option:hover {
+.inputTitleCategoryChoice option:hover {
   background-color: #e8f1f6;
 }
 
-.input_img {
+.addImg {
   height: 63px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 /*btn telecharger img*/
-.input_img_btn {
+.buttonImgInput {
   position: relative;
   bottom: -64px;
   color: transparent;
@@ -759,7 +739,6 @@ height: 52px;
 #modifModal{
   text-decoration: none;
   color: #000000;
-
   border: none;
   background-color: transparent;
 }
@@ -822,3 +801,29 @@ height: 52px;
   margin-bottom: 38px;
 }
 
+/******RESPONSIVE*****/
+@media screen and (min-width:769px) and (max-width: 992px) {
+  #btnCloseAddPhoto, #model_fermer {
+    padding: 8px 10px;
+    border: none;
+    font-size: 20px;
+    color: black;
+    background-color: #ffffff;
+    cursor: pointer;
+    position: absolute;
+    right: 490px;
+}
+}
+
+@media screen and (max-width: 768px) {
+  #btnCloseAddPhoto, #model_fermer {
+    padding: 8px 10px;
+    border: none;
+    font-size: 20px;
+    color: black;
+    background-color: #ffffff;
+    cursor: pointer;
+    position: absolute;
+    left:364px;
+}
+}
