--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -91,6 +91,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -105,18 +106,22 @@ nav,
 section {
   display: block;
 }
+
 body {
   background-color: rgba(247, 240, 231, 0.315);
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -124,17 +129,19 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 /** end reset css**/
 body {
   max-width: 1140px;
   margin: 0 auto;
   font-family: "Work Sans";
   font-size: 14px;
- 
+
 }
 
 header {
@@ -144,10 +151,12 @@ header {
   padding-bottom: 81px;
   padding-top: 45px;
 }
+
 main {
   margin: 0 auto;
   width: 90%;
 }
+
 section {
   margin: 50px 0;
 }
@@ -161,7 +170,7 @@ h1 {
   color: #b1663c;
 }
 
-h1 > span {
+h1>span {
   font-family: "Work Sans";
   font-weight: 400;
   text-transform: uppercase;
@@ -176,42 +185,49 @@ h2 {
   font-size: 30px;
   color: #1d6154;
 }
+
 nav ul {
   display: flex;
   align-items: center;
   list-style-type: none;
   column-gap: 25px;
 }
+
 nav li {
   font-size: 1.2em;
 }
+
 li a {
   text-decoration: none;
   color: black;
 }
+
 li:hover,
 li a:hover {
   font-weight: bolder;
-   font-weight: 1000;
-   color: rgb(17, 17, 17);
+  font-weight: 1000;
+  color: rgb(17, 17, 17);
 }
 
 .fa-instagram {
   font-size: 26px;
   cursor: pointer;
 }
+
 #introduction {
   display: flex;
   align-items: center;
   width: 90%;
   margin: 0 auto;
 }
+
 #introduction_photo {
   flex: 1;
   display: flex;
   flex-direction: column;
   row-gap: 25px;
 }
+
 #introduction img {
   display: block;
   width: 80%;
@@ -220,9 +236,11 @@ li a:hover {
 #introduction article {
   flex: 1;
 }
+
 #introduction h2 {
   margin-bottom: 1em;
 }
+
 .paragraphe {
   width: 404px;
   height: 192px;
@@ -236,11 +254,13 @@ li a:hover {
   font-size: 14px;
   line-height: 16px;
 }
+
 #portfolio h2 {
   margin-top: 26px;
   text-align: center;
   margin-bottom: 60px;
 }
+
 #modifierPortfolio {
   display: flex;
   align-items: baseline;
@@ -258,20 +278,25 @@ li a:hover {
   grid-row-gap: 20px;
   margin: 0 auto;
 }
+
 #modalGallery img,
 .gallery img {
   width: 100%;
 }
+
 #contact {
   width: 50%;
   margin: auto;
 }
-#contact > * {
+
+#contact>* {
   text-align: center;
 }
+
 #contact h2 {
   margin-bottom: 20px;
 }
+
 #contact form {
   text-align: left;
   margin-top: 30px;
@@ -285,9 +310,11 @@ li a:hover {
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
+
 #contact label {
   margin: 2em 0 1em 0;
 }
+
 #contact textarea {
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
@@ -317,6 +344,7 @@ footer nav ul {
   column-gap: 15px;
   margin-bottom: 50px;
 }
+
 .buttonCategory,
 #buttonAll {
   height: 37px;
@@ -347,7 +375,7 @@ footer nav ul {
   padding-top: 97px;
 }
 
-#headerOfLogin{
+#headerOfLogin {
   color: #1d6154;
   display: grid;
   justify-items: center;
@@ -364,6 +392,7 @@ footer nav ul {
   align-items: center;
   grid-gap: 7px;
 }
+
 .titleEmail,
 .passwordLogin {
   font-family: "Work Sans";
@@ -376,6 +405,7 @@ footer nav ul {
   position: relative;
   right: 166px;
 }
+
 .passwordLogin {
   right: 144px;
 }
@@ -389,6 +419,7 @@ footer nav ul {
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
   border: none;
 }
+
 .buttonAddPhoto,
 #submitFormLogin {
   border-radius: 60px;
@@ -414,7 +445,7 @@ footer nav ul {
 
 #banniere {
   max-width: 1140px;
-  width:100%;
+  width: 100%;
   height: 59px;
   margin: 0 auto;
   padding: 0px;
@@ -432,6 +463,7 @@ footer nav ul {
   align-items: stretch;
   column-gap: 14px;
 }
+
 .edition,
 .publier {
   font-family: "Work Sans";
@@ -467,20 +499,20 @@ footer nav ul {
 
 .modal {
   position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
 }
 
 .modalContainer {
   overflow: hidden;
   height: 610px;
-  width:516px;
+  width: 516px;
   max-width: calc(100vw - 100px);
   background-color: #FFFFFF;
   border-radius: 10px;
@@ -491,14 +523,16 @@ footer nav ul {
 }
 
 #btnCloseAddPhoto {
- 
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    align-items: end;
-    font-size: 20px;
-    border: none;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  align-items: end;
+  font-size: 20px;
+  border: none;
+  background-color: white;
+  padding: 0.6rem 0.5rem 0 0;
+  margin-right: .5rem;
+  cursor: pointer;
 }
 
 .modalTitle {
@@ -513,6 +547,7 @@ footer nav ul {
   text-align: center;
   margin-bottom: 40px;
 }
+
 .button {
   border-top: 1px solid #b3b3b3;
   padding-top: 40px;
@@ -522,6 +557,7 @@ footer nav ul {
   align-items: center;
   margin: 29px 0px 54px 0px;
 }
+
 .addPhotoModal,
 .deleteGaleryModal {
   cursor: pointer;
@@ -533,19 +569,24 @@ footer nav ul {
   text-align: center;
   width: 237px;
 }
-.buttonAddPhoto{
-margin-bottom: 10px;
+
+.buttonAddPhoto {
+  margin-bottom: 10px;
 }
-#buttonCloseModal{
-  border: none;
+
+#buttonCloseModal {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  align-items: end;
   font-size: 20px;
-  color: black;
-  background-color: #ffffff;
+  border: none;
+  background-color: white;
+  padding: 0.6rem 0.5rem 0 0;
+  margin-right: 0.5rem;
   cursor: pointer;
-  position: relative;
-  right: -229px;
-  margin-bottom: 0px;
 }
+
 .deleteGaleryModal {
   color: #d65353;
   background-color: white;
@@ -586,6 +627,8 @@ margin-bottom: 10px;
   position: absolute;
   margin: 5px;
   border-radius: 6px;
+  cursor: pointer;
+
 }
 
 
@@ -594,6 +637,8 @@ margin-bottom: 10px;
   right: 0px;
   top: 40px;
   z-index: 1;
+  cursor: pointer;
+
 }
 
 .fa-arrow-left {
@@ -601,13 +646,15 @@ margin-bottom: 10px;
   flex-direction: column;
   row-gap: 20px;
   align-items: center;
-  top: 27px;
   position: absolute;
   padding-left: 7px;
   font-size: 15px;
+  padding: 1rem;
   border: none;
-  background-color: white;
+  cursor: pointer;
+
 }
+
 .photo {
   background: #e8f1f7;
   color: #b9c5cc;
@@ -622,9 +669,11 @@ margin-bottom: 10px;
   align-items: center;
   background-color: rgb(232, 241, 246);
   height: auto;
+  margin-bottom: 1rem;
   width: 100%;
 
 }
+
 .add {
   color: #306685;
   background: #cbd6dc;
@@ -632,6 +681,7 @@ margin-bottom: 10px;
   height: 52px;
   cursor: pointer;
 }
+
 #modalAddGallery {
   height: 531px;
   width: 100%;
@@ -640,10 +690,12 @@ margin-bottom: 10px;
   align-items: center;
   flex-direction: column;
 }
+
 .inputTitleCategory label {
   padding-bottom: 10px;
   font-size: 16px;
 }
+
 .inputTitleCategoryChoice,
 .inputTitleCategory {
   display: flex;
@@ -652,6 +704,7 @@ margin-bottom: 10px;
   margin-bottom: 28px;
   width: 100%;
 }
+
 .inputTitleCategoryChoice,
 .titleModal {
   height: 30px;
@@ -659,19 +712,22 @@ margin-bottom: 10px;
   box-shadow: 0px 4px 14px rgb(0 0 0 / 9%);
   border: none;
 }
+
 .valider {
   background: #a7a7a7;
   border-radius: 60px;
 }
+
 .valider:hover {
   background-color: #1d6154;
 }
+
 .buttonValidate {
-    text-align: center;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .inputTitleCategoryChoice {
@@ -682,6 +738,7 @@ margin-bottom: 10px;
   outline: none;
   padding: 0 20px;
 }
+
 .inputTitleCategoryChoice option:hover {
   background-color: #e8f1f6;
 }
@@ -692,6 +749,7 @@ margin-bottom: 10px;
   align-items: center;
   justify-content: center;
 }
+
 /*btn telecharger img*/
 .buttonImgInput {
   position: relative;
@@ -699,7 +757,7 @@ margin-bottom: 10px;
   color: transparent;
   left: -1px;
   opacity: 0;
-  height: 52px;
+  height: 79px;
   width: 231px;
   cursor: pointer;
 }
@@ -708,6 +766,7 @@ margin-bottom: 10px;
   width: 193px;
   height: 218px;
 }
+
 #containerModal {
   display: flex;
   flex-direction: column;
@@ -715,6 +774,7 @@ margin-bottom: 10px;
   align-items: center;
   row-gap: 13px;
 }
+
 #downloadImg {
   width: 100%;
   height: 100%;
@@ -726,29 +786,38 @@ margin-bottom: 10px;
   height: 34px;
   color: red;
   font-weight: bolder;
+  display: flex;
   margin-top: 16px;
   margin-bottom: -19px;
   font-size: 16px;
   text-align: center;
+  width: 100%;
+  justify-content: center;
 }
-
-#modalGallery img{
+.errormsg {
+  text-align: start;
+ font-size: 10px;
+  color: red;
+}
+#modalGallery img {
   width: 100%;
 }
+
 .modalPhotoGallery {
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
   position: relative;
 }
-#modifModal{
+
+#modifModal {
   text-decoration: none;
   color: #000000;
   border: none;
   background-color: transparent;
 }
 
-#Modifier{
+#Modifier {
   border: none;
   background-color: transparent;
 }
@@ -762,7 +831,8 @@ margin-bottom: 10px;
   margin-right: 5px;
 }
 
-.fa-regular, .far {
+.fa-regular,
+.far {
   font-weight: 400;
   margin-right: 7px;
 }
@@ -774,11 +844,13 @@ margin-bottom: 10px;
   border-radius: 25px;
   cursor: pointer;
 }
-#addModal{
+
+#addModal {
   align-items: center;
 }
 
-.addPhotoModal,.valider {
+.addPhotoModal,
+.valider {
   border-radius: 60px;
   border: 1px #1d6154;
   width: 179px;
@@ -787,12 +859,13 @@ margin-bottom: 10px;
   background-color: #1d6154;
   color: white;
 }
+
 .valider {
   background: #a7a7a7;
   border-radius: 60px;
 }
 
-.titleModalFirst{
+.titleModalFirst {
   margin-top: -61px;
   color: #000000;
   display: flex;
@@ -806,4 +879,6 @@ margin-bottom: 10px;
   margin-bottom: 38px;
 }
 
-
+.add-photo-modal {
+  margin-top: -2rem;
+}
